import 'package:flutter/foundation.dart';

class TestKey {
  static const Key input = Key('input'),
      userNameInput = Key('userName'),
      passwordInput = Key('password'),
      hidePassword = Key('hidePw'),
      loggInButton = Key('loggIn'),
      loginError = Key('loginError'),
      goToNowButton = Key('goToNow'),
      appBarCloseButton = Key('appBarCloseButton'),
      changeView = Key('changeView'),
      timePillarButton = Key('timePillarButton'),
      timePillarSettingsButton = Key('timePillarSettingsButton'),
      agendaListButton = Key('agendaListButton  '),
      activityBackButton = Key('activityBackButton'),
      activityUncheckButton = Key('activityUncheckButton'),
      activityCheckButton = Key('activityCheckButton'),
      attachment = Key('attachment'),
      addActivity = Key('addActivity'),
      editTitleTextFormField = Key('editTitleTextFormField'),
      finishEditActivityButton = Key('finishEditActivityButton'),
      fullDaySwitch = Key('fullDaySwitch'),
      datePicker = Key('datePicker'),
      startTimePicker = Key('startTimePicker'),
      endTimePicker = Key('endTimePicker'),
      hourTextInput = Key('hourTextInput'),
      minTextInput = Key('minTextInput'),
      pmRadioField = Key('pmRadioField'),
      amRadioField = Key('amRadioField'),
      rightCategoryRadio = Key('rightCategoryRadio'),
      leftCategoryRadio = Key('leftCategoryRadio'),
      alarmAtStartSwitch = Key('alarmAtStartSwitch'),
      checkableSwitch = Key('checkableSwitch'),
      deleteAfterSwitch = Key('deleteAfterSwitch'),
      addPicture = Key('addPicture'),
      selectAlarm = Key('selectAlarm'),
      vibrationAlarm = Key('vibrationAlarm'),
      availibleFor = Key('availibleFor'),
      onlyMe = Key('onlyMe'),
      closeDialog = Key('closeDialog'),
      okDialog = Key('okDialog'),
      editReminder = Key('editReminder'),
      editAlarm = Key('editAlarm'),
      removePicture = Key('removePicture'),
      imageArchiveButton = Key('imageArchiveButton'),
      onlyThisDay = Key('onlyThisDay'),
      allDays = Key('allDays'),
      thisDayAndForward = Key('thisDayAndForward'),
      viewImage = Key('viewImage'),
      infoItemNoneRadio = Key('infoItemNoneRadio'),
      infoItemChecklistRadio = Key('infoItemChecklistRadio'),
      infoItemNoteRadio = Key('infoItemNoteRadio'),
      checklistQuestionImageKey = Key('checklistQuestionImageKey'),
      preview = Key('preview'),
      edgePreview = Key('edgePreview'),
      dotsPreview = Key('dotsPreview'),
      changeInfoItem = Key('changeInfoItem'),
      changeRecurrence = Key('changeRecurrence'),
      noEndDate = Key('noEndDate'),
      startTime = Key('startTime'),
      endTime = Key('endTime'),
      dayAppBarTitle = Key('dayAppBarTitle'),
      sideDotsTimeText = Key('sideDotsTimeText'),
      errorViewDialog = Key('errorViewDialog'),
      animatedTheme = Key('animatedTheme'),
      checkDialogCheckButton = Key('checkDialogCheckButton'),
      checkDialogUncheckButton = Key('checkDialogUncheckButton'),
      checkDialogCancelButton = Key('checkDialogCancelButton'),
      cameraPickField = Key('cameraPickField'),
      photosPickField = Key('photosPickField'),
      newActivityButton = Key('newActivityButton'),
      selectBasicActivityButton = Key('selectBasicActivityButton');
}
